@@ -37,23 +37,23 @@ public class TurnService {
 
     public void activeTurnInitial(Game game) {
         List<Turn> turns = findTurnInTheGame(game);
-        turns.getFirst().setActive(true);
-        turnRepository.save(turns.getFirst());
+        turns.get(0).setActive(true);
+        turnRepository.save(turns.get(0));
     }
 
     public void nextTurn(Game game) {
         List<Turn> turns = findTurnInTheGame(game);
         Object[] response = deactivateTurn(game);
         if (response == null) {
-            turns.getFirst().setActive(true);
-            turnRepository.save(turns.getFirst());
+            turns.get(0).setActive(true);
+            turnRepository.save(turns.get(0));
         }else {
             if (Integer.parseInt(String.valueOf(response[1])) < turns.size()) {
                 turns.get((int) response[1]).setActive(true);
                 turnRepository.save(turns.get((int) response[1]));
             } else {
-                turns.getFirst().setActive(true);
-                turnRepository.save(turns.getFirst());
+                turns.get(0).setActive(true);
+                turnRepository.save(turns.get(0));
             }
         }
     }
